# rust_webrtc_tunnel

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  memory.md  p2ptunnel  run_claude.sh~
.githooks/: commit-msg
.github/: copilot-instructions.md
.github/workflows/: ci.yml
android/: .editorconfig  README.md  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  detekt.yml
android/docs/: P5_FORWARD_RUNTIME_STATUS_SPEC.md  P5_FORWARD_RUNTIME_STATUS_TODO.md  UIUX_IMPROVEMENTS2_TODO.md  responses1.md
android/gradle/: libs.versions.toml
crates/p2p-daemon/: Cargo.toml
crates/p2p-mobile/: Cargo.toml
crates/p2p-mobile/src/: c_abi.rs  diagnostics.rs  jni_bridge.rs  lib.rs  runtime.rs  tests.rs
crates/p2p-mobile/src/runtime/: log_bridge.rs  mod.rs  state.rs  tests.rs  types.rs
crates/p2p-signaling/: Cargo.toml
crates/p2p-tunnel/: Cargo.toml
crates/p2p-webrtc/: Cargo.toml
crates/p2p-webrtc/src/: ice.rs  lib.rs  peer.rs
docs/: ANDROID_BUILD.md  ANDROID_FINAL_PATCH_TODO.md  ANDROID_FIX_TODO1.md  ANDROID_FIX_TODO_2.md  ANDROID_FIX_TODO_3.md  ANDROID_TINY_FINAL_PATCH_TODO.md  ANDROID_UI_FIX_TODO2.md  ANDROID_UI_FIX_TODO4.md  ANDROID_UI_POLISH_TODO.md  ANDROID_VALIDATION.md  ANDROID_WEBRTC_DATA_PLANE_ISSUE.md  ANDROID_WEBRTC_TUNNEL_TODO.md  DOCKER_TESTS1_TODO.md  MULTIPLEXED_FORWARDING_TODO.md  RUST_WEBRTC_CODE_REVIEW1_TODO.md  RUST_WEBRTC_CODE_REVIEW2_TODO.md  RUST_WEBRTC_CODE_REVIEW3_TODO.md  RUST_WEBRTC_CODE_REVIEW4_TODO.md  RUST_WEBRTC_CODE_REVIEW5_TODO.md  RUST_WEBRTC_SPECS.md  RUST_WEBRTC_TODO.md  V03_CODE_REVIEW2.md  V03_FIX2_TODO.md  V03_SPEC.md  V03_TODO.md  WEBRTC_TUNNEL_HARDENING_SPEC.md  WEBRTC_TUNNEL_HARDENING_TODO.md  memory.md  responses3.md
docs/examples/: answer-config.toml  offer-config.toml
tests/e2e/: README.md  android_smoke.sh  android_tunnel_debug.sh  android_tunnel_e2e.sh  (+1 more)
(+150 files in other folders)
