[package]
name = "p2p-mobile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
p2p-core = { path = "../p2p-core" }
p2p-crypto = { path = "../p2p-crypto" }
p2p-daemon = { path = "../p2p-daemon" }
p2p-webrtc = { path = "../p2p-webrtc" }
webrtc-util = "0.7"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jni = "0.21.1"

[dev-dependencies]
tempfile = "3.20.0"

[lints.rust]
# This crate is the Android JNI/FFI boundary and must allow Rust `unsafe_code`
# for exported native functions and pointer/pointer-lifetime handling. Cargo
# does not currently support inheriting the workspace lint table while
# overriding only this one Rust lint in the shape needed here, so the Clippy
# block below intentionally mirrors `[workspace.lints.clippy]`. Keep this list
# in sync with the workspace policy and do not relax `unwrap_used`, `todo`, or
# `dbg_macro`.
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
